# r2robot_module_msgs

./: CMakeLists.txt  README.md  package.xml  rosbridge_mapping_rules.yaml
action/: CartDMP.action  JointDMP.action
msg/: CartesianSpaceDMP.msg  JointSpaceDMP.msg
srv/: Output.srv  SetRobotTool.srv
